robotic-codes/src/test/test_zeropad.txt
test_zeropad.cpp: In function ‘int main()’:
test_zeropad.cpp:8:12: error: expected initializer before ‘s1’
   string s s1;
            ^~
test_zeropad.cpp:9:3: error: ‘s’ was not declared in this scope
   s = "hello"
   ^
test_zeropad.cpp:12:10: error: ‘num’ was not declared in this scope
   cin >> num;
          ^~~
test_zeropad.cpp:12:10: note: suggested alternative: ‘enum’
   cin >> num;
          ^~~
          enum
test_zeropad.cpp:13:10: error: ‘l’ was not declared in this scope
   cin >> l;
          ^
test_zeropad.cpp:14:3: error: ‘s1’ was not declared in this scope
   s1 = zero_pad(num, l);
   ^~
test_zeropad.cpp:14:8: error: ‘zero_pad’ was not declared in this scope
   s1 = zero_pad(num, l);
        ^~~~~~~~
